feat(vscode): 支持打开规则链接

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -3,7 +3,7 @@
   "displayName": "any-reader",
   "description": "摸鱼,自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
   "icon": "resources/icon.png",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader/issues",
   "bugs": {
@@ -82,6 +82,11 @@
         "command": "any-reader.openLocalBookDir",
         "title": "open local book dir",
         "icon": "$(folder-opened)",
+        "category": "any-reader"
+      },
+      {
+        "command": "any-reader.openUrl",
+        "title": "open url",
         "category": "any-reader"
       }
     ],
