--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,6 +25,7 @@
   "main": "dist/electron-js/main.js",
   "dependencies": {
     "@any-reader/core": "workspace:^",
+    "@any-reader/rule-utils": "workspace:^",
     "@any-reader/shared": "workspace:^",
     "@arco-design/web-vue": "^2.55.2",
     "@unocss/reset": "^0.51.13",
@@ -34,6 +35,7 @@
     "axios": "^1.3.4",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
+    "file-saver": "^2.0.5",
     "hls.js": "^1.5.3",
     "lodash-es": "^4.17.21",
     "monaco-editor": "0.47.0",
