feat(vscode): 支持直接打开 Epub 文件

--- a/packages/vscode/.eslintrc.json
+++ b/packages/vscode/.eslintrc.json
@@ -15,5 +15,5 @@
     "no-throw-literal": "warn",
     "semi": "off"
   },
-  "ignorePatterns": ["out", "dist", "**/*.d.ts"]
+  "ignorePatterns": ["out", "dist", "template-dist", "**/*.d.ts"]
 }
