--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,6 +33,8 @@
     "@vscode/webview-ui-toolkit": "^1.4.0",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "blueimp-md5": "^2.19.0",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
     "file-saver": "^2.0.5",
@@ -50,6 +52,8 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/blueimp-md5": "^2.18.2",
     "@types/jsdom": "^21.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.16",
