--- a/packages/epub/package.json
+++ b/packages/epub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/epub",
-  "version": "1.5.4",
+  "version": "1.6.0",
   "description": "",
   "scripts": {
     "build": "unbuild"
@@ -18,6 +18,10 @@
     "dist",
     "epub.d.ts"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aooiuu/any-reader"
+  },
   "dependencies": {
     "adm-zip": "^0.4.11",
     "xml2js": "^0.4.23"
