--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/shared",
-  "version": "1.5.4",
+  "version": "1.6.0",
   "description": "",
   "scripts": {
     "build": "unbuild",
@@ -22,6 +22,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aooiuu/any-reader"
+  },
   "dependencies": {
     "@any-reader/core": "workspace:^",
     "@any-reader/epub": "workspace:^",
@@ -41,8 +45,6 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/encoding-japanese": "^2.0.5",
-    "@types/koa-router": "^7.4.8",
-    "@types/koa-static": "^4.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.16.19",
     "esno": "^0.16.3",
