feat: 读取 epub 图片

--- a/packages/epub/tsconfig.json
+++ b/packages/epub/tsconfig.json
@@ -9,6 +9,7 @@
     "strict": true,
     "strictNullChecks": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {}
   }
 }
