--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@any-reader/monorepo",
+  "name": "any-reader",
   "type": "module",
   "version": "1.6.0",
   "packageManager": "pnpm@8.6.5",
