--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "*.d.ts"
   ],
   "scripts": {
+    "release": "bumpp -r --no-push",
     "clean": "rimraf packages/*/dist --glob",
     "clean:npm": "rimraf packages/*/node_modules --glob && rimraf node_modules",
     "run:core": "npm -C packages/core run start",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@types/mime": "3.0.4",
     "@types/uuid": "^9.0.8",
+    "bumpp": "^9.4.1",
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "unbuild": "^2.0.0"
