feat: 适配 rubick

--- a/.npmrc
+++ b/.npmrc
@@ -8,3 +8,4 @@ public-hoist-pattern=*
 shamefully-hoist=true
 
 electron_mirror="https://npmmirror.com/mirrors/electron/"
+puppeteer-download-base-url="https://cdn.npmmirror.com/binaries/chrome-for-testing"
