--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@any-reader/core",
+  "type": "module",
   "version": "1.7.1",
   "description": "",
-  "scripts": {
-    "start": "esno src/start.ts",
-    "build": "unbuild",
-    "stub": "unbuild --stub"
+  "author": "aooiuu",
+  "license": "GPL3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aooiuu/any-reader"
   },
   "keywords": [],
-  "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -20,9 +21,10 @@
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aooiuu/any-reader"
+  "scripts": {
+    "start": "esno src/start.ts",
+    "build": "unbuild",
+    "stub": "unbuild --stub"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -44,7 +46,5 @@
     "typescript": "^5.1.6",
     "vite": "^4.5.3",
     "vitest": "^0.32.2"
-  },
-  "author": "aooiuu",
-  "license": "GPL3"
+  }
 }
