--- a/packages/rubick/package.json
+++ b/packages/rubick/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/aooiuu/any-reader/issues"
   },
   "keywords": [],
+  "main": "",
   "files": [
     "public"
   ],
