--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "packageManager": "pnpm@8.6.5",
   "description": "",
-  "author": "aooiuu",
+  "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
   "homepage": "https://github.com/aooiuu/any-reader#readme",
   "repository": {
