--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.7.2",
   "description": "",
-  "author": "aooiuu",
+  "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
   "repository": {
     "type": "git",
