--- a/packages/rubick/package.json
+++ b/packages/rubick/package.json
@@ -4,7 +4,7 @@
   "version": "1.7.2",
   "private": true,
   "description": "",
-  "author": "aooiuu",
+  "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
   "homepage": "https://github.com/aooiuu/any-reader#readme",
   "repository": {
