--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest]
-        # os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
 
     steps:
       - name: check out git repository
@@ -35,28 +34,28 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: pnpm install
-        run: pnpm install
-
-      - name: build libs
-        run: pnpm run build
-
+      - run: pnpm install
+      - run: pnpm run build
       - name: publish to npm
+        if: matrix.os == 'windows-latest'
         run: pnpm -r publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
 
       - name: build vscode template
+        if: matrix.os == 'windows-latest'
         run: pnpm run vscode:build-tpl
 
       - name: rename vscode vsx
+        if: matrix.os == 'windows-latest'
         # working-directory 用于指定在哪个目录下执行命令
         working-directory: ./packages/vscode
         run: pnpm run build:rename
 
       # https://github.com/HaaLeo/publish-vscode-extension
       - name: build vscode vsx
+        if: matrix.os == 'windows-latest'
         uses: HaaLeo/publish-vscode-extension@v1
         id: publishVSX
         with:
@@ -68,35 +67,23 @@ jobs:
 
       - name: Build Electron App
         run: pnpm electron:build
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-
-      - name: Cleanup Artifacts for Windows
-        if: matrix.os == 'windows-latest'
-        run: |
-          npx rimraf "packages/web/dist/electron/!(*.exe)"
-
-      # - name: Cleanup Artifacts for MacOS
-      #   if: matrix.os == 'macos-latest'
-      #   run: |
-      #     npx rimraf "packages/web/dist/electron/!(*.dmg)"
-
-      # https://github.com/actions/upload-artifact
-      - name: upload artifacts
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: ${{ matrix.os }}
-          path: |
-            ${{ steps.publishVSX.outputs.vsixPath }}
-            packages/web/dist/electron
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # https://github.com/softprops/action-gh-release
       - name: release
         uses: softprops/action-gh-release@v2.0.4
         if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           # draft: true
-          files: |
-            packages/web/dist/electron/**
-            packages/vscode/*.vsix
           # prerelease: true
+          files: |
+            packages/web/dist/electron/*.AppImage
+            packages/web/dist/electron/*.deb
+            packages/web/dist/electron/*.dmg
+            packages/web/dist/electron/*.exe
+            packages/web/dist/electron/*.rpm
+            packages/web/dist/electron/*.zip
+            packages/vscode/*.vsix
