--- a/packages/web/electron-builder.json5
+++ b/packages/web/electron-builder.json5
@@ -20,17 +20,44 @@
     '!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}'
   ],
   mac: {
-    target: ['dmg']
+    target: ['dmg', 'zip'],
+    category: 'public.app-category.productivity',
+    artifactName: '${productName}-mac-${arch}-${version}.${ext}'
+  },
+  // Mac下打包成dmg文件相关配置内容
+  dmg: {
+    // background: 'assets/appdmg.png',
+    // icon: 'assets/icon.icns',
+    iconSize: 100,
+    contents: [
+      // 安装时展示的内容
+      {
+        x: 380,
+        y: 280,
+        type: 'link',
+        path: '/Applications'
+      },
+      {
+        x: 110,
+        y: 280,
+        type: 'file'
+      }
+    ],
+    window: {
+      width: 500,
+      height: 500
+    }
   },
   win: {
     artifactName: '${productName}-win32-${arch}-${version}.${ext}',
     // "icon": "public/icon.png",
-    target: [
-      {
-        target: 'nsis',
-        arch: ['x64', 'ia32']
-      }
-    ]
+    target: ['nsis', 'zip'],
+    verifyUpdateCodeSignature: false
+  },
+  linux: {
+    target: ['deb', 'AppImage'],
+    artifactName: '${productName}-linux-${arch}-${version}.${ext}'
+    // "icon": "assest/icon.ico"
   },
   nsis: {
     oneClick: false,
