--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -93,6 +93,7 @@
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
     "vite": "^4.5.3",
+    "vite-bundle-analyzer": "^0.10.3",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-mock": "^3.0.1",
     "vue-tsc": "^1.8.27"
