--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -92,6 +92,7 @@
     "typescript": "~5.3.3",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^4.5.3",
     "vite-bundle-analyzer": "^0.10.3",
     "vite-plugin-electron": "^0.28.7",
