feat: 优化小说换行解析

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # draft: true
+          draft: true
           # prerelease: true
           files: |
             packages/web/dist/electron/*.AppImage
