--- a/packages/rule-utils/package.json
+++ b/packages/rule-utils/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "base64-js": "^1.5.1",
+    "fast-xml-parser": "^4.4.0",
     "pako": "^2.1.0",
     "uuid": "^9.0.1"
   }
