feat: 分类添加左右翻页

--- a/packages/web/electron-builder.yml
+++ b/packages/web/electron-builder.yml
@@ -20,6 +20,7 @@ files:
 win:
   artifactName: ${productName}-win32-${arch}-${version}.${ext}
   target:
+    - target: zip
     - target: nsis
       arch:
         - x64
