--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -5,7 +5,6 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+
     branches:
-      - master
       - dev
 
 jobs:
@@ -79,6 +78,7 @@ jobs:
           prerelease: true
           draft: true
           files: |
+            packages/web/dist/electron/latest*.yml
             packages/web/dist/electron/*.AppImage
             packages/web/dist/electron/*.deb
             packages/web/dist/electron/*.dmg
