--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cheerio": "1.0.0-rc.12",
+    "iconv-lite": "^0.6.3",
     "jsonpath-plus": "^7.2.0",
     "puppeteer": "^21.7.0",
     "urlencode": "^2.0.0",
