--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@any-reader/server",
+  "type": "module",
   "version": "1.7.6",
   "description": "",
-  "scripts": {
-    "build": "unbuild",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esno watch src/run.ts"
+  "author": "aooiuu <aooiu@qq.com>",
+  "license": "GPL3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aooiuu/any-reader"
   },
-  "type": "module",
+  "keywords": [],
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -19,12 +21,10 @@
   "files": [
     "dist"
   ],
-  "keywords": [],
-  "author": "aooiuu <aooiu@qq.com>",
-  "license": "GPL3",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aooiuu/any-reader"
+  "scripts": {
+    "build": "unbuild",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "esno watch src/run.ts"
   },
   "dependencies": {
     "@any-reader/core": "workspace:^",
@@ -41,8 +41,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/koa-router": "^7.4.8",
-    "@types/koa-static": "^4.0.4",
     "@types/koa-session": "^6.4.5",
+    "@types/koa-static": "^4.0.4",
     "@types/koa__cors": "^5.0.0",
     "esno": "^0.16.3"
   }
