--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.5.1",
     "chardet": "^2.0.0",
     "cheerio": "1.0.0-rc.12",
+    "content-type": "^1.0.5",
     "iconv-lite": "^0.6.3",
     "jsonpath-plus": "^7.2.0",
     "puppeteer": "^21.7.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@any-reader/rule-utils": "workspace:^",
+    "@types/content-type": "^1.1.8",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.16.19",
     "@types/xmldom": "^0.1.34",
