--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -151,6 +151,10 @@
     "typescript": "^4.7.4",
     "uuid": "^9.0.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-filter-warnings-plugin": "^1.2.1"
+  },
+  "dependencies": {
+    "sqlite3": "5.1.6"
   }
 }
