--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,7 +33,8 @@
     "vscode:build": "cross-env VITE_APP_PLATFORM=vscode run-p type-check \"build-only {@}\" --",
     "utools:build": "cross-env VITE_APP_PLATFORM=utools run-p type-check \"build-only {@}\" --",
     "cli:build": "cross-env VITE_APP_PLATFORM=browser outDir=../cli/public vite build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild -f -w sqlite3"
   },
   "main": "dist/electron-js/main.js",
   "dependencies": {
@@ -61,6 +62,7 @@
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
     "qs": "^6.12.1",
+    "sqlite3": "5.1.6",
     "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.1.6"
@@ -83,6 +85,7 @@
     "cross-env": "^7.0.3",
     "electron": "30.0.6",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "mockjs": "^1.1.0",
