chore: remove cache

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+          # cache: pnpm
+          registry-url: "https://registry.npmjs.org"
 
       - id: pkgversion
         uses: ashley-taylor/read-json-property-action@v1.2
