feat: 已读章节半透明

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "paths": {
-      "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
-      "@any-reader/core": ["./packages/core/src/index.ts"],
-      "@any-reader/epub": ["./packages/epub/src/index.ts"],
-      "@any-reader/shared": ["./packages/shared/src/index.ts"]
+      // "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
+      // "@any-reader/core": ["./packages/core/src/index.ts"],
+      // "@any-reader/epub": ["./packages/epub/src/index.ts"],
+      // "@any-reader/shared": ["./packages/shared/src/index.ts"]
     }
   }
 }
