--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,6 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.45"
+    "vitepress": "^1.3.0"
   }
 }
