--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -24,7 +24,10 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
+
       - uses: pnpm/action-setup@v3
+        with:
+          version: 9.4.0
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -43,7 +46,7 @@ jobs:
 
       - name: fix pnpm.cjs
         if: matrix.os == 'windows-latest'
-        run: sed -i 's/\/usr\/bin\/env node/node/g' C:/Users/runneradmin/setup-pnpm/node_modules/.pnpm/pnpm@8.6.5/node_modules/pnpm/bin/pnpm.cjs
+        run: sed -i 's/\/usr\/bin\/env node/node/g' C:/Users/runneradmin/setup-pnpm/node_modules/.pnpm/pnpm@9.4.0/node_modules/pnpm/bin/pnpm.cjs
         shell: bash
 
       - run: pnpm install
