--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v3
+        with:
+          version: 9.4.0
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -32,7 +34,7 @@ jobs:
 
       - name: fix pnpm.cjs
         if: matrix.os == 'windows-latest'
-        run: sed -i 's/\/usr\/bin\/env node/node/g' C:/Users/runneradmin/setup-pnpm/node_modules/.pnpm/pnpm@8.6.5/node_modules/pnpm/bin/pnpm.cjs
+        run: sed -i 's/\/usr\/bin\/env node/node/g' C:/Users/runneradmin/setup-pnpm/node_modules/.pnpm/pnpm@9.4.0/node_modules/pnpm/bin/pnpm.cjs
         shell: bash
 
       - run: npx changelogithub
