--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,8 +48,6 @@
     "esno": "^0.16.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.5.3",
-    "vitest": "^0.32.2"
+    "typescript": "^5.1.6"
   }
 }
