--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: pnpm/action-setup@v3
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -43,10 +41,12 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
-        run: pnpm install
+        working-directory: ./docs
+        run: npm install
 
       - name: Build with VitePress
-        run: pnpm build:docs
+        working-directory: ./docs
+        run: npm docs:build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
